Travis CI: Add Python 3.7 to the testing
Adds Python 3.7 in alignment with travis-ci/travis-ci#9069

--- a/.travis.yml
+++ b/.travis.yml
@@ -7,8 +7,11 @@ python:
   - "3.4"
   - "3.5"
   - "3.6"
-# Not available on Travis yet:
-#   - "3.7"
+matrix:
+  include:
+    - python: 3.7
+      dist: xenial    # required for Python 3.7 (travis-ci/travis-ci#9069)
+      sudo: required  # required for Python 3.7 (travis-ci/travis-ci#9069)
 # commands to install dependencies
 install:
   - "sudo apt-get install scons chrpath"
