--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -9,6 +9,7 @@ include bin/compare_with_cpython
 include bin/compare_with_xml
 include bin/check-nuitka-with-pylint
 include bin/autoformat-nuitka-source
+include bin/measure-construct-performance
 
 include misc/*.sh
 include misc/*.bat
