--- a/requirements.txt
+++ b/requirements.txt
@@ -2,5 +2,5 @@
 # Folders to use for cache files.
 appdirs == 1.4.3
 
-# Scons is the backend building too to turn C files to binaries.
+# Scons is the backend building tool to turn C files to binaries.
 scons == 3.0.1
