--- a/.travis.yml
+++ b/.travis.yml
@@ -15,6 +15,7 @@ matrix:
 # commands to install dependencies
 install:
   - "sudo apt-get install scons chrpath"
+  - "sudo apt-get install python-distutils"
   # This will install PyLint but not where it does not work. It will fail
   # to install 2.6 and be buggy for 3.3
   - "pip install -r requirements-devel.txt"
