--- a/requirements.txt
+++ b/requirements.txt
@@ -4,3 +4,6 @@ appdirs == 1.4.3
 
 # Scons is the backend building tool to turn C files to binaries.
 scons == 3.0.1
+
+# PEfile for Windows internal dependency walker in Standalone.py
+pefile
