--- a/.travis.yml
+++ b/.travis.yml
@@ -1,21 +1,44 @@
 # Python project, check against all supported things.
 language: python
-os: osx
-python:
-  - "2.6"
-  - "2.7"
-  - "3.3"
-  - "3.4"
-  - "3.5"
-  - "3.6"
 matrix:
   include:
-    - python: 3.7
-      dist: xenial    # required for Python 3.7 (travis-ci/travis-ci#9069)
-      sudo: required  # required for Python 3.7 (travis-ci/travis-ci#9069)
+  - os: linux
+    sudo: required
+    python: 2.6
+    dist: trusty
+  - os: linux
+    sudo: required
+    python: 2.7
+    dist: trusty
+  - os: linux
+    sudo: required
+    python: 3.3
+    dist: trusty
+  - os: linux
+    sudo: required
+    python: 3.4
+    dist: trusty
+  - os: linux
+    sudo: required
+    python: 3.5
+    dist: trusty
+  - os: linux
+    sudo: required
+    python: 3.6
+    dist: trusty
+  - os: osx
+    language: generic
+    before_install:
+    - travis_wait brew update
+    - brew install python3
+    - brew upgrade python
+    - pip install virtualenv
+    - virtualenv env -p python3
+    - source env/bin/activate
+    - alias pip="pip3"
 # commands to install dependencies
 install:
-  - "sudo apt-get install scons chrpath"
+  - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then sudo apt-get install scons chrpath ; fi
   # This will install PyLint but not where it does not work. It will fail
   # to install 2.6 and be buggy for 3.3
   - "pip install -r requirements-devel.txt"
