--- a/requirements-devel.txt
+++ b/requirements-devel.txt
@@ -9,3 +9,6 @@ black == 18.9b0 ; python_version >= '3.6'
 isort == 4.3.4 ; python_version == '2.7'
 redbaron == 0.9.1 ; python_version >= '2.7'
 baron == 0.9 ; python_version >= '2.7'
+
+# API doc, doxygen helper for Python
+doxypypy == 0.8.8.6 ; python_version >= '2.7'
