Eclipse: Ignore *.tmp files as well
* The autoformat tool is going to produce these while it's working
  on a file, so it avoids flickering towards IDEs.

* This suffix should be irrelevant to the IDE anyway.

--- a/.project
+++ b/.project
@@ -16,7 +16,7 @@
 	</natures>
 	<filteredResources>
 		<filter>
-			<id>1548266973767</id>
+			<id>1551869171395</id>
 			<name></name>
 			<type>10</type>
 			<matcher>
@@ -25,7 +25,7 @@
 			</matcher>
 		</filter>
 		<filter>
-			<id>1548266973778</id>
+			<id>1551869171410</id>
 			<name></name>
 			<type>26</type>
 			<matcher>
@@ -34,7 +34,7 @@
 			</matcher>
 		</filter>
 		<filter>
-			<id>1548266973785</id>
+			<id>1551869171442</id>
 			<name></name>
 			<type>22</type>
 			<matcher>
@@ -43,7 +43,7 @@
 			</matcher>
 		</filter>
 		<filter>
-			<id>1548266973799</id>
+			<id>1551869171457</id>
 			<name></name>
 			<type>22</type>
 			<matcher>
@@ -52,7 +52,7 @@
 			</matcher>
 		</filter>
 		<filter>
-			<id>1548266973803</id>
+			<id>1551869171473</id>
 			<name></name>
 			<type>26</type>
 			<matcher>
@@ -61,7 +61,7 @@
 			</matcher>
 		</filter>
 		<filter>
-			<id>1548266973806</id>
+			<id>1551869171488</id>
 			<name></name>
 			<type>10</type>
 			<matcher>
@@ -70,7 +70,7 @@
 			</matcher>
 		</filter>
 		<filter>
-			<id>1548266973807</id>
+			<id>1551869171520</id>
 			<name></name>
 			<type>22</type>
 			<matcher>
@@ -79,7 +79,7 @@
 			</matcher>
 		</filter>
 		<filter>
-			<id>1548266973808</id>
+			<id>1551869171535</id>
 			<name></name>
 			<type>10</type>
 			<matcher>
@@ -88,7 +88,7 @@
 			</matcher>
 		</filter>
 		<filter>
-			<id>1548266973808</id>
+			<id>1551869171551</id>
 			<name></name>
 			<type>10</type>
 			<matcher>
@@ -97,7 +97,7 @@
 			</matcher>
 		</filter>
 		<filter>
-			<id>1548266973809</id>
+			<id>1551869171567</id>
 			<name></name>
 			<type>22</type>
 			<matcher>
@@ -106,7 +106,7 @@
 			</matcher>
 		</filter>
 		<filter>
-			<id>1548266973810</id>
+			<id>1551869171598</id>
 			<name></name>
 			<type>10</type>
 			<matcher>
@@ -115,7 +115,7 @@
 			</matcher>
 		</filter>
 		<filter>
-			<id>1548266973810</id>
+			<id>1551869171613</id>
 			<name></name>
 			<type>26</type>
 			<matcher>
@@ -124,7 +124,7 @@
 			</matcher>
 		</filter>
 		<filter>
-			<id>1548266973811</id>
+			<id>1551869171629</id>
 			<name></name>
 			<type>22</type>
 			<matcher>
@@ -133,7 +133,7 @@
 			</matcher>
 		</filter>
 		<filter>
-			<id>1548266973812</id>
+			<id>1551869171645</id>
 			<name></name>
 			<type>22</type>
 			<matcher>
@@ -142,7 +142,7 @@
 			</matcher>
 		</filter>
 		<filter>
-			<id>1548266973813</id>
+			<id>1551869171676</id>
 			<name></name>
 			<type>26</type>
 			<matcher>
@@ -151,7 +151,7 @@
 			</matcher>
 		</filter>
 		<filter>
-			<id>1548266973814</id>
+			<id>1551869171696</id>
 			<name></name>
 			<type>10</type>
 			<matcher>
@@ -160,7 +160,7 @@
 			</matcher>
 		</filter>
 		<filter>
-			<id>1548266973815</id>
+			<id>1551869171706</id>
 			<name></name>
 			<type>22</type>
 			<matcher>
@@ -169,7 +169,7 @@
 			</matcher>
 		</filter>
 		<filter>
-			<id>1548266973815</id>
+			<id>1551869171722</id>
 			<name></name>
 			<type>10</type>
 			<matcher>
@@ -178,7 +178,7 @@
 			</matcher>
 		</filter>
 		<filter>
-			<id>1548266973816</id>
+			<id>1551869171753</id>
 			<name></name>
 			<type>10</type>
 			<matcher>
@@ -187,7 +187,7 @@
 			</matcher>
 		</filter>
 		<filter>
-			<id>1548266973819</id>
+			<id>1551869171769</id>
 			<name></name>
 			<type>22</type>
 			<matcher>
@@ -196,7 +196,7 @@
 			</matcher>
 		</filter>
 		<filter>
-			<id>1548266973821</id>
+			<id>1551869171800</id>
 			<name></name>
 			<type>10</type>
 			<matcher>
@@ -205,7 +205,7 @@
 			</matcher>
 		</filter>
 		<filter>
-			<id>1548266973822</id>
+			<id>1551869171816</id>
 			<name></name>
 			<type>26</type>
 			<matcher>
@@ -214,7 +214,7 @@
 			</matcher>
 		</filter>
 		<filter>
-			<id>1548266973823</id>
+			<id>1551869171831</id>
 			<name></name>
 			<type>22</type>
 			<matcher>
@@ -223,7 +223,7 @@
 			</matcher>
 		</filter>
 		<filter>
-			<id>1548266973824</id>
+			<id>1551869171862</id>
 			<name></name>
 			<type>22</type>
 			<matcher>
@@ -232,7 +232,7 @@
 			</matcher>
 		</filter>
 		<filter>
-			<id>1548266973837</id>
+			<id>1551869171877</id>
 			<name></name>
 			<type>26</type>
 			<matcher>
@@ -241,7 +241,7 @@
 			</matcher>
 		</filter>
 		<filter>
-			<id>1548266973840</id>
+			<id>1551869171893</id>
 			<name></name>
 			<type>10</type>
 			<matcher>
@@ -250,7 +250,7 @@
 			</matcher>
 		</filter>
 		<filter>
-			<id>1548266973844</id>
+			<id>1551869171915</id>
 			<name></name>
 			<type>22</type>
 			<matcher>
@@ -259,7 +259,7 @@
 			</matcher>
 		</filter>
 		<filter>
-			<id>1548266973845</id>
+			<id>1551869171947</id>
 			<name></name>
 			<type>10</type>
 			<matcher>
@@ -268,7 +268,7 @@
 			</matcher>
 		</filter>
 		<filter>
-			<id>1548266973846</id>
+			<id>1551869171962</id>
 			<name></name>
 			<type>10</type>
 			<matcher>
@@ -277,7 +277,7 @@
 			</matcher>
 		</filter>
 		<filter>
-			<id>1548266973847</id>
+			<id>1551869171994</id>
 			<name></name>
 			<type>22</type>
 			<matcher>
@@ -286,7 +286,7 @@
 			</matcher>
 		</filter>
 		<filter>
-			<id>1548266973848</id>
+			<id>1551869172009</id>
 			<name></name>
 			<type>10</type>
 			<matcher>
@@ -295,7 +295,7 @@
 			</matcher>
 		</filter>
 		<filter>
-			<id>1548266973852</id>
+			<id>1551869172040</id>
 			<name></name>
 			<type>26</type>
 			<matcher>
@@ -304,7 +304,7 @@
 			</matcher>
 		</filter>
 		<filter>
-			<id>1548266973853</id>
+			<id>1551869172056</id>
 			<name></name>
 			<type>22</type>
 			<matcher>
@@ -313,7 +313,7 @@
 			</matcher>
 		</filter>
 		<filter>
-			<id>1548266973858</id>
+			<id>1551869172087</id>
 			<name></name>
 			<type>22</type>
 			<matcher>
@@ -322,7 +322,7 @@
 			</matcher>
 		</filter>
 		<filter>
-			<id>1548266973859</id>
+			<id>1551869172119</id>
 			<name></name>
 			<type>26</type>
 			<matcher>
@@ -331,7 +331,7 @@
 			</matcher>
 		</filter>
 		<filter>
-			<id>1548266973860</id>
+			<id>1551869172134</id>
 			<name></name>
 			<type>10</type>
 			<matcher>
@@ -340,7 +340,7 @@
 			</matcher>
 		</filter>
 		<filter>
-			<id>1548266973886</id>
+			<id>1551869172173</id>
 			<name></name>
 			<type>22</type>
 			<matcher>
@@ -349,7 +349,7 @@
 			</matcher>
 		</filter>
 		<filter>
-			<id>1548266973887</id>
+			<id>1551869172198</id>
 			<name></name>
 			<type>10</type>
 			<matcher>
@@ -358,7 +358,7 @@
 			</matcher>
 		</filter>
 		<filter>
-			<id>1548266973888</id>
+			<id>1551869172223</id>
 			<name></name>
 			<type>10</type>
 			<matcher>
@@ -367,7 +367,7 @@
 			</matcher>
 		</filter>
 		<filter>
-			<id>1548266973890</id>
+			<id>1551869172239</id>
 			<name></name>
 			<type>22</type>
 			<matcher>
@@ -376,7 +376,7 @@
 			</matcher>
 		</filter>
 		<filter>
-			<id>1548266973891</id>
+			<id>1551869172270</id>
 			<name></name>
 			<type>10</type>
 			<matcher>
@@ -385,7 +385,7 @@
 			</matcher>
 		</filter>
 		<filter>
-			<id>1548266973892</id>
+			<id>1551869172301</id>
 			<name></name>
 			<type>26</type>
 			<matcher>
@@ -394,7 +394,7 @@
 			</matcher>
 		</filter>
 		<filter>
-			<id>1548266973894</id>
+			<id>1551869172333</id>
 			<name></name>
 			<type>22</type>
 			<matcher>
@@ -403,7 +403,7 @@
 			</matcher>
 		</filter>
 		<filter>
-			<id>1548266973895</id>
+			<id>1551869172348</id>
 			<name></name>
 			<type>22</type>
 			<matcher>
@@ -412,7 +412,7 @@
 			</matcher>
 		</filter>
 		<filter>
-			<id>1548266973902</id>
+			<id>1551869172380</id>
 			<name></name>
 			<type>26</type>
 			<matcher>
@@ -421,7 +421,7 @@
 			</matcher>
 		</filter>
 		<filter>
-			<id>1548266973908</id>
+			<id>1551869172411</id>
 			<name></name>
 			<type>10</type>
 			<matcher>
@@ -430,7 +430,7 @@
 			</matcher>
 		</filter>
 		<filter>
-			<id>1548266973914</id>
+			<id>1551869172442</id>
 			<name></name>
 			<type>22</type>
 			<matcher>
@@ -439,7 +439,7 @@
 			</matcher>
 		</filter>
 		<filter>
-			<id>1548266973915</id>
+			<id>1551869172458</id>
 			<name></name>
 			<type>10</type>
 			<matcher>
@@ -448,7 +448,7 @@
 			</matcher>
 		</filter>
 		<filter>
-			<id>1548266973921</id>
+			<id>1551869172489</id>
 			<name></name>
 			<type>10</type>
 			<matcher>
@@ -457,7 +457,7 @@
 			</matcher>
 		</filter>
 		<filter>
-			<id>1548266973927</id>
+			<id>1551869172520</id>
 			<name></name>
 			<type>22</type>
 			<matcher>
@@ -466,7 +466,7 @@
 			</matcher>
 		</filter>
 		<filter>
-			<id>1548266973932</id>
+			<id>1551869172551</id>
 			<name></name>
 			<type>10</type>
 			<matcher>
@@ -475,7 +475,7 @@
 			</matcher>
 		</filter>
 		<filter>
-			<id>1548266973938</id>
+			<id>1551869172567</id>
 			<name></name>
 			<type>26</type>
 			<matcher>
@@ -484,7 +484,7 @@
 			</matcher>
 		</filter>
 		<filter>
-			<id>1548266973944</id>
+			<id>1551869172598</id>
 			<name></name>
 			<type>22</type>
 			<matcher>
@@ -493,7 +493,7 @@
 			</matcher>
 		</filter>
 		<filter>
-			<id>1548266973950</id>
+			<id>1551869172630</id>
 			<name></name>
 			<type>22</type>
 			<matcher>
@@ -502,7 +502,7 @@
 			</matcher>
 		</filter>
 		<filter>
-			<id>1548266973955</id>
+			<id>1551869172645</id>
 			<name></name>
 			<type>26</type>
 			<matcher>
@@ -511,7 +511,7 @@
 			</matcher>
 		</filter>
 		<filter>
-			<id>1548266973960</id>
+			<id>1551869172683</id>
 			<name></name>
 			<type>10</type>
 			<matcher>
@@ -520,7 +520,7 @@
 			</matcher>
 		</filter>
 		<filter>
-			<id>1548266973964</id>
+			<id>1551869172707</id>
 			<name></name>
 			<type>22</type>
 			<matcher>
@@ -529,7 +529,7 @@
 			</matcher>
 		</filter>
 		<filter>
-			<id>1548266973968</id>
+			<id>1551869172739</id>
 			<name></name>
 			<type>10</type>
 			<matcher>
@@ -538,7 +538,7 @@
 			</matcher>
 		</filter>
 		<filter>
-			<id>1548266973972</id>
+			<id>1551869172754</id>
 			<name></name>
 			<type>10</type>
 			<matcher>
@@ -547,7 +547,7 @@
 			</matcher>
 		</filter>
 		<filter>
-			<id>1548266973976</id>
+			<id>1551869172785</id>
 			<name></name>
 			<type>22</type>
 			<matcher>
@@ -556,7 +556,7 @@
 			</matcher>
 		</filter>
 		<filter>
-			<id>1548266973980</id>
+			<id>1551869172817</id>
 			<name></name>
 			<type>10</type>
 			<matcher>
@@ -565,7 +565,7 @@
 			</matcher>
 		</filter>
 		<filter>
-			<id>1548266973986</id>
+			<id>1551869172848</id>
 			<name></name>
 			<type>26</type>
 			<matcher>
@@ -574,7 +574,7 @@
 			</matcher>
 		</filter>
 		<filter>
-			<id>1548266973993</id>
+			<id>1551869172879</id>
 			<name></name>
 			<type>22</type>
 			<matcher>
@@ -583,7 +583,7 @@
 			</matcher>
 		</filter>
 		<filter>
-			<id>1548266974000</id>
+			<id>1551869172910</id>
 			<name></name>
 			<type>22</type>
 			<matcher>
@@ -592,7 +592,7 @@
 			</matcher>
 		</filter>
 		<filter>
-			<id>1548266974005</id>
+			<id>1551869172942</id>
 			<name></name>
 			<type>26</type>
 			<matcher>
@@ -601,7 +601,7 @@
 			</matcher>
 		</filter>
 		<filter>
-			<id>1548266974006</id>
+			<id>1551869172973</id>
 			<name></name>
 			<type>10</type>
 			<matcher>
@@ -610,7 +610,7 @@
 			</matcher>
 		</filter>
 		<filter>
-			<id>1548266974007</id>
+			<id>1551869172989</id>
 			<name></name>
 			<type>22</type>
 			<matcher>
@@ -619,7 +619,7 @@
 			</matcher>
 		</filter>
 		<filter>
-			<id>1548266974008</id>
+			<id>1551869173020</id>
 			<name></name>
 			<type>10</type>
 			<matcher>
@@ -628,7 +628,7 @@
 			</matcher>
 		</filter>
 		<filter>
-			<id>1548266974008</id>
+			<id>1551869173051</id>
 			<name></name>
 			<type>10</type>
 			<matcher>
@@ -637,7 +637,7 @@
 			</matcher>
 		</filter>
 		<filter>
-			<id>1548266974009</id>
+			<id>1551869173082</id>
 			<name></name>
 			<type>22</type>
 			<matcher>
@@ -646,12 +646,21 @@
 			</matcher>
 		</filter>
 		<filter>
-			<id>1548266974010</id>
+			<id>1551869173114</id>
 			<name></name>
 			<type>22</type>
 			<matcher>
 				<id>org.eclipse.ui.ide.multiFilter</id>
 				<arguments>1.0-name-matches-false-false-*.pyo</arguments>
+			</matcher>
+		</filter>
+		<filter>
+			<id>1551869173114</id>
+			<name></name>
+			<type>22</type>
+			<matcher>
+				<id>org.eclipse.ui.ide.multiFilter</id>
+				<arguments>1.0-name-matches-false-false-*.tmp</arguments>
 			</matcher>
 		</filter>
 	</filteredResources>
