--- a/.gitmodules
+++ b/.gitmodules
@@ -1,32 +1,32 @@
 [submodule "tests/CPython26"]
-	path = tests/CPython26
-	url = http://git.nuitka.net/tests-Nuitka-CPython.git
-	branch = CPython26
+    path = tests/CPython26
+    url = git@github.com:Nuitka/Nuitka-CPython-tests
+    branch = CPython26
 [submodule "tests/CPython27"]
-	path = tests/CPython27
-	url = http://git.nuitka.net/tests-Nuitka-CPython.git
-	branch = CPython27
+    path = tests/CPython27
+    url = git@github.com:Nuitka/Nuitka-CPython-tests
+    branch = CPython27
 [submodule "tests/CPython32"]
-	path = tests/CPython32
-	url = http://git.nuitka.net/tests-Nuitka-CPython.git
-	branch = CPython32
+    path = tests/CPython32
+    url = git@github.com:Nuitka/Nuitka-CPython-tests
+    branch = CPython32
 [submodule "tests/CPython33"]
-	path = tests/CPython33
-	url = http://git.nuitka.net/tests-Nuitka-CPython.git
-	branch = CPython33
+    path = tests/CPython33
+    url = git@github.com:Nuitka/Nuitka-CPython-tests
+    branch = CPython33
 [submodule "tests/CPython34"]
-	path = tests/CPython34
-	url = http://git.nuitka.net/tests-Nuitka-CPython.git
-	branch = CPython34
+    path = tests/CPython34
+    url = git@github.com:Nuitka/Nuitka-CPython-tests
+    branch = CPython34
 [submodule "tests/CPython35"]
-	path = tests/CPython35
-	url = http://git.nuitka.net/tests-Nuitka-CPython.git
-	branch = CPython35
+    path = tests/CPython35
+    url = git@github.com:Nuitka/Nuitka-CPython-tests
+    branch = CPython35
 [submodule "tests/CPython36"]
-	path = tests/CPython36
-	url = http://git.nuitka.net/tests-Nuitka-CPython.git
-	branch = CPython36
+    path = tests/CPython36
+    url = git@github.com:Nuitka/Nuitka-CPython-tests
+    branch = CPython36
 [submodule "tests/CPython37"]
-	path = tests/CPython37
-	url = http://git.nuitka.net/tests-Nuitka-CPython.git
-	branch = CPython37
+    path = tests/CPython37
+    url = git@github.com:Nuitka/Nuitka-CPython-tests
+    branch = CPython37
