Optimization: Creating the "+" specialized helpers with Jinja2.
* This fixes some wrong manual optimization that was not always
  fully correct.

* Calling int+int preferred in the OBJECT_OBJECT variant is removed
  for now, lets first see benchmark results.

* The coerce code has been enhanced, but could be much better still,
  esp. for cases, where it's clear it will be used, we could hard code
  it too, e.g. "long" + "float" will do it always.

* This covers only what has been done so far, in an attempt to go in
  small steps.

--- a/requirements-devel.txt
+++ b/requirements-devel.txt
@@ -12,3 +12,6 @@ baron == 0.9 ; python_version >= '2.7'
 
 # API doc, doxygen helper for Python
 doxypypy == 0.8.8.6 ; python_version >= '2.7'
+
+# Code and test generation tools
+Jinja2 == 2.10.1; python_version >= '2.7'
