Quality: Use codespell to find typos in comments.

--- a/requirements-devel.txt
+++ b/requirements-devel.txt
@@ -15,3 +15,6 @@ doxypypy == 0.8.8.6 ; python_version >= '2.7'
 
 # Code and test generation tools
 Jinja2 == 2.10.1; python_version >= '2.7'
+
+# Codespell can be used as well, no need to fix version
+codespell; python_version >= '2.7'
