Visual Code: Also ignore "*.tmp" files
* These are ignored by the autoformat tool.

* Also make it clear that ".h" and ".c" files are C codes, it seems
  that is not clear to Visual Code.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,9 +6,12 @@
         "**/*.build": true,
         "**/*.pyc": true,
         "**/__pycache__": true,
-        "**/*.orig": true
+        "**/*.orig": true,
+        "**/*.tmp": true,
     },
     "files.associations": {
-        "*.scons" : "python"
+        "*.scons": "python",
+        "*.h": "c",
+        "*.c": "c",
     }
 }
