--- a/.travis.yml
+++ b/.travis.yml
@@ -1,23 +1,33 @@
 # Python project, check against all supported things.
 language: python
+
 python:
-#  - "2.6"
-  - "2.7"
-#  - "3.3"
-  - "3.4"
-  - "3.5"
-  - "3.6"
+#  - 2.6
+  - 2.7
+#  - 3.3
+  - 3.4
+  - 3.5
+  - 3.6
+
 matrix:
   include:
-    - python: 3.7
+    - os: linux
+      python: 3.7
       dist: xenial    # required for Python 3.7 (travis-ci/travis-ci#9069)
       sudo: required  # required for Python 3.7 (travis-ci/travis-ci#9069)
+    - os: osx
+      osx_image: xcode11
+      language: shell
+      before_install:
+      - brew update -q
+      - brew outdated python || brew upgrade python
+
 # disable submodules from git
 git:
   submodules: false
 # commands to install dependencies
 install:
-  - "sudo apt-get install scons chrpath"
+  - 'if [ -x "$(command -v apt-get)" ]; then sudo apt-get install scons chrpath; fi'
   # This will install PyLint but not where it does not work. It will fail
   # to install 2.6 and be buggy for 3.3
   - "pip install -r requirements-devel.txt"
