Git: Ignore more build results and IDE files.

--- a/.gitignore
+++ b/.gitignore
@@ -19,9 +19,22 @@
 .mypy_cache
 Nuitka.egg-info
 tests/reflected/nuitka/
+tests/reflected/tests/
 tests/reflected/nuitka.py
 tests/reflected/nuitka-runner.py
 tests/basics/BigConstants.py
+*.dist
+*.build
+*.dblite
+*.pdb
+releases/
+man/
+htmlcov/
+Mini.py
+python??.dll
+python??_d.dll
+build
+!nuitka/build
 dist
 MANIFEST
 README.pdf
@@ -34,3 +47,10 @@ doc/*.1
 doc/man-*.html
 doxygen-warnings.log
 venv_cpython/
+venv_nuitka/
+.pytest_cache
+doxygen_*
+doxygen-*
+*.tmp
+.vscode/ipch
+.vscode/tags
