--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -11,7 +11,8 @@
         "**/__pycache__": true,
         "**/*.orig": true,
         "**/*.tmp": true,
-        "tests/reflected/nuitka": true
+        "tests/reflected/nuitka": true,
+        "tests/distutils/venv_*": true,
     },
     "files.associations": {
         "*.scons": "python",
