Tests: Move generated test to separate runner.

--- a/.gitignore
+++ b/.gitignore
@@ -23,6 +23,7 @@ tests/reflected/tests/
 tests/reflected/nuitka.py
 tests/reflected/nuitka-runner.py
 tests/basics/BigConstants.py
+tests/generated/*.py
 *.dist
 *.build
 *.dblite
