Visual Code: Ignore setup develop files

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -13,6 +13,7 @@
         "**/*.tmp": true,
         "tests/reflected/nuitka": true,
         "tests/distutils/venv_*": true,
+        "build" : true,
     },
     "files.associations": {
         "*.scons": "python",
