--- a/.travis.yml
+++ b/.travis.yml
@@ -8,32 +8,39 @@ matrix:
       dist: xenial
       sudo: required
       env: PYTHON=python2.7
+      cache: ccache
     - os: linux
       python: 3.4
       dist: xenial
       sudo: required
       env: PYTHON=python3.4
+      cache: ccache
     - os: linux
       python: 3.5
       dist: xenial
       sudo: required
       env: PYTHON=python3.5
+      cache: ccache
     - os: linux
       python: 3.6
       dist: xenial
       sudo: required
       env: PYTHON=python3.6
+      cache: ccache
     - os: linux
       python: 3.7
       dist: xenial
       sudo: required
       env: PYTHON=python3.7
+      cache: ccache
     - os: osx
       osx_image: xcode11
       language: shell
       before_install:
       - brew update -q
       - brew outdated python || brew upgrade python
+      - brew install ccache
+      - export PATH="/usr/local/opt/ccache/libexec:$PATH"
       env: PYTHON=python
     - os: osx
       osx_image: xcode11
@@ -41,6 +48,8 @@ matrix:
       before_install:
       - brew update -q
       - brew outdated python@3 || brew upgrade python@3
+      - brew install ccache
+      - export PATH="/usr/local/opt/ccache/libexec:$PATH"
       env: PYTHON=python3
 
 # disable submodules from git
@@ -53,8 +62,9 @@ install:
   - "pip install ."
 # commands to run tests
 script:
-  - env | sort
-  - $PYTHON ./tests/run-tests --no-other-python --skip-reflection-test --skip-all-cpython-tests
+  - '$PYTHON -m nuitka --version'
+  - 'env | sort'
+  - '$PYTHON ./tests/run-tests --no-other-python --skip-reflection-test --skip-all-cpython-tests'
   - 'if [ "$TRAVIS_PYTHON_VERSION" = "3.7" ]; then ./bin/check-nuitka-with-restlint; fi'
   - 'if [ "$TRAVIS_PYTHON_VERSION" = "3.7" ]; then ./bin/check-nuitka-with-codespell; fi'
-  - ./bin/check-nuitka-with-pylint --not-installed-is-no-error
+  - './bin/check-nuitka-with-pylint --not-installed-is-no-error'
