Visual Code: Force using black for in-IDE code formatting

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -47,4 +47,5 @@
     ],
     "python.linting.ignorePatterns" : ["tests/CPython??/test/**"],
     "restructuredtext.confPath": "",
+    "python.formatting.provider": "black",
 }
