Quality: Updated to latest PyLint version

--- a/requirements-devel.txt
+++ b/requirements-devel.txt
@@ -1,8 +1,8 @@
 # PyLint wouldn't be installable on 2.6 and not work with too old Python3
 
 pylint == 1.9.5 ; python_version == '2.7'
-pylint == 2.4.3 ; python_version >= '3.6'
-astroid == 2.3.2 ; python_version >= '3.6'
+pylint == 2.4.4 ; python_version >= '3.6'
+astroid == 2.3.3 ; python_version >= '3.6'
 
 # linting rest code snippets
 Pygments == 2.4.2 ; python_version == '2.7' or python_version >= '3.6'
@@ -22,3 +22,6 @@ Jinja2 == 2.10.1 ; python_version >= '2.7'
 
 # Codespell can be used as well, no need to fix version
 codespell ; python_version >= '2.7'
+
+# Distutils test, packaging test for PyPI
+virtualenv
