--- a/requirements-devel.txt
+++ b/requirements-devel.txt
@@ -23,5 +23,6 @@ Jinja2 == 2.10.1 ; python_version >= '2.7'
 # Codespell can be used as well, no need to fix version
 codespell ; python_version >= '2.7'
 
-# Distutils test, packaging test for PyPI
+# Distutils test, packaging test for PyPI, not fixed on purpose.
 virtualenv
+pytest
